# zingolib

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  TROUBLESHOOTING.md  USE_CASES.md  app_description.txt  flake.nix  keygen.sh  mkrelease.sh  network_updown.sh  rust-toolchain.toml  rustfmt.toml  tmp.txt
.cargo/: config.toml
cli/: Cargo.toml  README.md
cli/examples/: sapling_regtest_secret_extended_key  scenarios.rs  zcash.conf
cli/src/: lib.rs  main.rs  regtest.rs  version.rs
cli/tests/: integration_tests.rs  sapling_regtest_address
cli/tests/data/: externalwallet_coinbaseaddress.conf  mod.rs
cli/tests/setup/: mod.rs
cli/tests/utils/: mod.rs
config/: Cargo.toml
config/src/: lib.rs
darkside-tests/: Cargo.toml  build.rs
darkside-tests/proptest-regressions/: chain_generics.txt
darkside-tests/src/: advanced_reorg_tests_constants.rs  chain_generic_tests.rs  chain_generics.rs  constants.rs  generic_chain_tests.rs  interrupt_sync_tx_hex.rs  lib.rs  utils.rs
darkside-tests/tests/: advanced_reorg_tests.rs  darkside_connector.rs  mod.rs  network_interruption_tests.rs  shield_transparent.rs  tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: chain_generic_tests.rs  lib.rs
integration-tests/tests/: chain_generic_tests.rs  generic_chain_tests.rs  integrations.rs  libtonode.rs  shield_transparent.rs
lib/: Cargo.toml  keygen.sh
lib/proto/: compact_formats.proto  service.proto
lib/src/: blaze.rs  commands.rs  compact_formats.rs  grpc_connector.rs  lib.rs  lightclient.rs  lightwallet.rs  test_vectors.rs  utils.rs  wallet.rs
lib/src/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_transaction.rs  fetch_full_tx.rs  fetch_taddr_transactions.rs  fetch_taddr_txns.rs  fixed_size_buffer.rs  sync_status.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/lightclient/: checkpoints.rs  lightclient_config.rs  test_server.rs  testmocks.rs  tests.rs
lib/src/lightwallet/: data.rs  keys.rs  message.rs  orchardkeys.rs  wallet_transactions.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
lib/src/test_framework/: macros.rs
lib/src/wallet/: data.rs  keys.rs  message.rs  traits.rs  transactions.rs  utils.rs
lib/test-data/: openssl_cfg
libtonode-tests/: Cargo.toml
libtonode-tests/tests/: chain_generics.rs  concrete.rs  legacy.rs  load_wallet.rs  shield_transparent.rs  sync.rs  wallet.rs
live-tests/: Cargo.toml
live-tests/tests/: balance.rs
lsp_failer/: Cargo.toml
lsp_failer/src/: main.rs
zingo-memo/: Cargo.toml
zingo-memo/src/: lib.rs  memo_serde.rs  utils.rs
zingo-netutils/: Cargo.toml
zingo-netutils/src/: lib.rs
zingo-sync/: Cargo.toml
zingo-sync/src/: client.rs  error.rs  interface.rs  keys.rs  lib.rs  map_nullifier.rs  note.rs  primitives.rs  proxy_connector.rs  scan.rs  scan_director.rs  scan_transaction.rs  scanner.rs  state.rs  sync.rs  traits.rs  transaction.rs  trial_decrypt.rs  update_spend.rs  utils.rs  witness.rs
zingo-sync/src/client/: fetch.rs  fetcher.rs
zingo-sync/src/scan/: compact_blocks.rs  error.rs  runners.rs  task.rs  transactions.rs  workers.rs
zingo-sync/src/scan_director/: priority.rs
zingo-sync/src/scan_transaction/: fees.rs
zingo-sync/src/scanner/: runners.rs
zingo-testutils/: Cargo.toml  build.rs
zingo-testutils/regtest/conf/: zcash.conf
zingo-testutils/src/: assertions.rs  chain_generic_tests.rs  chain_generics.rs  data.rs  fee_tables.rs  grpc_proxy.rs  interrupts.rs  lib.rs  lightclient.rs  macros.rs  paths.rs  proposal_comparisons.rs  regtest.rs
zingo-testutils/src/chain_generics/: conduct_chain.rs  fixtures.rs  with_assertions.rs
zingo-testutils/src/lightclient/: with_assertions.rs
zingocli/: Cargo.toml  README.md  build.rs
zingocli/examples/: iplink_interrupt.rs
zingocli/regtest/: README.md
zingocli/src/: lib.rs  main.rs  regtest.rs  version.rs
zingocli/tests/: README.md  argument_parsing.rs  darksidewalletd_tests.rs  integration_tests.rs
zingocli/tests/darkside/: advanced_reorg_tests.rs  advanced_reorg_tests_constants.rs  constants.rs  mod.rs  tests.rs  utils.rs
zingocli/tests/darksidewalletd/: darksidewalletd.rs  mod.rs
zingocli/tests/data/: mod.rs
zingocli/tests/scripts/: start_darksidewalletd.sh
zingocli/tests/times/: sync_1153_baseline_faucet_synctime.json  sync_1153_baseline_recipient_synctime.json  time_to_sync_baseline_1153.json
zingocli/tests/utils/: mod.rs
zingoconfig/: CHANGELOG.md  Cargo.toml
zingoconfig/src/: lib.rs
zingolib/: CHANGELOG.md  Cargo.toml  build.rs
zingolib/proto/: service.proto
zingolib/src/: blaze.rs  commands.rs  compact_formats.rs  config.rs  confirmation_status.rs  data.rs  error.rs  grpc_connector.rs  lib.rs  lightclient.rs  macros.rs  mocks.rs  pocket.rs  test_framework.rs  test_utils.rs  testutils.rs  testvectors.rs  utils.rs  wallet.rs  wallet_internal_memo_handling.rs
zingolib/src/blaze/: block_management_reorg_detection.rs  block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_transaction.rs  fetch_taddr_transactions.rs  full_transactions_processor.rs  sync_status.rs  syncdata.rs  syncronizer.rs  targetted_rescan.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
zingolib/src/commands/: error.rs  utils.rs
zingolib/src/data/: confirmation_status.rs  mod.rs  notes.rs  proposal.rs  witness_trees.rs
zingolib/src/lightclient/: checkpoints.rs  deprecated.rs  describe.rs  disk.rs  integration_helpers.rs  propose.rs  read.rs  save.rs  send.rs  shield.rs  sync.rs  test_features.rs  test_server.rs  tests.rs
zingolib/src/shard/: block_witness_data.rs  fetch_full_transaction.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
zingolib/src/test_framework/: chain_generic_tests.rs  generic_chain_tests.rs  macros.rs  mocks.rs
zingolib/src/testutils/: assertions.rs  chain_generics.rs  fee_tables.rs  grpc_proxy.rs  interrupts.rs  legacy_loads.rs  lightclient.rs  macros.rs  regtest.rs
zingolib/src/testvectors/: CHANGELOG.md
zingolib/src/utils/: conversion.rs  error.rs
zingolib/test-data/: README  localhost.pem
(+199 files in other folders)
