#  The order of the members reflects a dimension of the dependency relation, the first four depend on
#     *  zingolib
#  which depends in turn, on the bottom 3.
#  This doesn't account for all dependency relations, for example, zingocli depends on zingoconfig directly (for now).
[workspace]
members = [
    "zingo-testutils",
    "libtonode-tests",
    "darkside-tests",
    "zingocli",
    "zingolib",
    "zingoconfig",
    "zingo-testvectors",
    "zingo-netutils",
    "zingo-memo",
]
resolver = "2"

[workspace.dependencies]
zcash_address = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required" }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required", features = ["lightwalletd-tonic", "orchard", "transparent-inputs"] }
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required" }
zcash_keys = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required", features = ["orchard"] }
zcash_note_encryption = "0.4"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required" }
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required" }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "fix_change_required" }
sapling-crypto = "0.1.2"
orchard = "0.8"
zip32 = "0.1"

clap = "4.4"
tempdir = "0.3"
portpicker = "0.1"
incrementalmerkletree = { version = "0.5" }
futures = "0.3.15"
shardtree = "0.3"
build_utils = { path = "./build_utils" }
http = "0.2.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
http-body = "0.4.4"
tonic = {version = "0.10.0", features = ["tls", "tls-roots", "tls-webpki-roots"]}
prost = "0.12.0"
tower = { version = "0.4" }
hex = "0.4"
tokio-rustls = "0.23"
webpki-roots = "0.25"
thiserror = "1.0.59"
nonempty = "0.7"
append-only-vec = { git = "https://github.com/zancas/append-only-vec.git", branch = "add_debug_impl" }
base58 = "0.1.0"
base64 = "0.13.0"
bls12_381 = "0.8"
byteorder = "1"
bytes = "0.4"
concat-idents = "1.1.3"
dirs = "5.0"
ff = "0.13"
futures-util = "0.3.28"
getset = "0.1.2"
group = "0.13"
hdwallet = "0.4.1"
indoc = "2.0.1"
itertools = "0.10.5"
json = "0.12.4"
jubjub = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
log4rs = "1.1.1"
proptest = "1.4.0"
rand = "0.8.5"
reqwest = "0.12"
ring = "0.17.0"
ripemd160 = "0.9.1"
rust-embed = "6.3.0"
rustls-pemfile = "1.0.0"
rustyline = "11.0.0"
secp256k1 = "=0.26.0"
secrecy = "0.8.0"
serde = "1.0.201"
serde_json = "1.0.107"
sha2 = "0.9.5"
shellwords = "1.1.0"
subtle = "2.4.1"
tempfile = "3.3.0"
test-case = "3.3.1"
tokio = "1.28.2"
tonic-build = "0.10"
tracing-subscriber = "0.3.15"
enum_dispatch = "0.3.13"

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false
