#  The order of the members reflects a dimension of the dependency relation, the first four depend on
#     *  zingolib
#  which depends in turn, on the bottom 3.
#  This doesn't account for all dependency relations, for example, zingocli depends on zingoconfig directly (for now).
[workspace]
members = [
    "libtonode-tests",
    "darkside-tests",
    "zingocli",
    "zingolib",
    "zingo-netutils",
    "zingo-memo",
    "zingo-sync",
]
resolver = "2"

[workspace.dependencies]
bip0039 = "0.11"
orchard = "0.9"
sapling-crypto = "0.2"
shardtree = "0.4"

# annotated tag starting with LRZ base tag and ending with `git describe --dirty`
# TAG FROM `main_zingolib` BRANCH OF LIBRUSTZCASH FORK!
zcash_address = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08" }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08" , features = ["lightwalletd-tonic", "orchard", "transparent-inputs"] }
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08"  }
zcash_keys = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08" , features = ["transparent-inputs", "sapling", "orchard" ] }
zcash_note_encryption = "0.4"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08"  }
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08"  }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08"  }
zip32 = "0.1"

append-only-vec = { git = "https://github.com/zancas/append-only-vec.git", branch = "add_debug_impl" }
base58 = "0.1.0"
base64 = "0.13.0"
bls12_381 = "0.8"
build_utils = { path = "./build_utils" }
byteorder = "1"
bytes = "0.4"
chrono = "0.4"
clap = "4.4"
concat-idents = "1.1.3"
dirs = "5.0"
enum_dispatch = "0.3.13"
ff = "0.13"
futures = "0.3.15"
futures-util = "0.3.28"
getset = "0.1.2"
group = "0.13"
hex = "0.4"
http = "1.1.0"
http-body-util = "0.1.2"
http-body = "1.0.0"
hyper-util = "0.1.5"
hyper = { version = "1.3.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
incrementalmerkletree = { version = "0.6.0" }
indoc = "2.0.1"
itertools = "0.10.5"
json = "0.12.4"
jubjub = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
log4rs = "1.1.1"
memuse = "0.2.1"
nonempty = "0.7"
portpicker = "0.1"
proptest = "1.4.0"
prost = "0.13.2"
rand = "0.8.5"
reqwest = "0.12"
ring = "0.17.0"
rust-embed = "6.3.0"
rustls = { version = "0.23.13", features = ["ring"] }
rustls-pemfile = "1.0.0"
rustyline = "11.0.0"
secp256k1 = "=0.27.0"
secrecy = "0.8.0"
serde = "1.0.201"
serde_json = "1.0.107"
sha2 = "0.9.5"
shellwords = "1.1.0"
subtle = "~2.5.0"
tempdir = "0.3"
tempfile = "3.3.0"
test-case = "3.3.1"
thiserror = "1.0.59"
tokio = "1.28.2"
tokio-rustls = "0.26"
tonic = {version = "0.12.2", features = ["tls", "tls-roots", "tls-webpki-roots"]}
tonic-build = "0.12"
tower = { version = "0.4" }
tracing = "0.1.40"
tracing-subscriber = "0.3.15"
webpki-roots = "0.25"

# Parallel processing
crossbeam-channel = "0.5"
rayon = "1.5"
bip32 = { version = "0.5", default-features = false }
bs58 = "0.5"

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false
