[package]
name = "zingo-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
rustyline = "9.1.2"
clap = "3.2.20"
log = "0.4.17"
shellwords = "1.1.0"
json = "0.12.4"
http = "0.2.8"
tokio =  { version = "1.6.0", features = ["full"] }

zingolib = { path = "../lib/" }
zingoconfig = { path = "../config/" }
tracing-subscriber = "0.3.15"
