[package]
name = "zingo-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
rustyline = "9.1.2"
clap = "3.2.20"
log = "0.4.17"
shellwords = "1.1.0"
json = "0.12.4"
http = "0.2.8"
tokio =  { version = "1.6.0", features = ["full"] }

zingolib = { path = "../lib/" }
zingoconfig = { path = "../config/" }
zingtaddrfix = { git = "https://github.com/zingolabs/zingolib", package = "zingolib", rev = "f8fb624237fd4923512cc065620b55230676ab82", optional = true }

[dev-dependencies]
bech32 = "0.9.0"
portpicker = "0.1.1"
rand = "0.8.5"
tempdir = "0.3.7"
tracing-subscriber = "0.3.15"
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash", rev = "25d4a04bacfe2df4f3aa7a80862a539f79040d89"}
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "25d4a04bacfe2df4f3aa7a80862a539f79040d89", features = ["transparent-inputs", "test-dependencies"] }

[features]
cross_version = [ "dep:zingtaddrfix" ]
