[package]
name = "zingoconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.1.1"
log = "0.4.14"
http = "0.2.4"
dirs = "3.0.2"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "975a31754d01ffde666ce19a7126041c0261a290", features = ["transparent-inputs", "test-dependencies"] }
zcash_address = { git = "https://github.com/zingolabs/librustzcash", rev = "975a31754d01ffde666ce19a7126041c0261a290"}
