[package]
name = "zingoconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.1.1"
log = "0.4.14"
http = "0.2.4"
dirs = "3.0.2"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990", features = ["transparent-inputs", "test-dependencies"] }
zcash_address = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990"}
