[package]
name = "darkside-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
chain_generic_tests = []

[dependencies]
zingolib = { path = "../zingolib", features = ["darkside_tests", "deprecations"] }
zingo-testutils = { path = "../zingo-testutils" }
zingo-testvectors = { path = "../zingo-testvectors" }
zingoconfig = { path = "../zingoconfig" }
tokio = { version = "1.25.0", features = ["full"] }
json = "0.12.4"
http = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
http-body = { workspace = true }
hex = { workspace = true }

zcash_primitives = { workspace = true }
tempdir = { workspace = true }
portpicker = { workspace = true }
futures-util = "0.3.28"
orchard = { workspace = true }
zcash_client_backend = { workspace = true }
serde_json = "1.0.107"
sapling-crypto.workspace = true
proptest = "1.4.0"

[build-dependencies]
tonic-build = "0.10"
