[package]
name = "darkside-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
chain_generic_tests = []

[dependencies]
zingolib = { path = "../zingolib", features = ["darkside_tests", "testvectors"] }
zingo-netutils = { path = "../zingo-netutils" }
tokio = { workspace = true, features = ["full"] }
json = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
http-body = { workspace = true }
hex = { workspace = true }

zcash_primitives = { workspace = true }
tempdir = { workspace = true }
portpicker = { workspace = true }
futures-util = { workspace = true }
orchard = { workspace = true }
zcash_client_backend = { workspace = true }
serde_json = { workspace = true }
sapling-crypto.workspace = true
proptest = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
