[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { path = "../zingolib", features = ["test"] }
zingo-testutils = { path = "../zingo-testutils" }
zingoconfig = { path = "../zingoconfig" }
tokio = { version = "1.25.0", features = ["full"] }
json = "0.12.4"
log = "0.4.17"
http = { workspace = true, optional = true}
hyper = { workspace = true, optional = true}
tonic = { workspace = true, optional = true}
prost = { workspace = true, optional = true}
tower = { workspace = true, optional = true}

[dev-dependencies]
zcash_primitives = { workspace = true }
tempdir = { workspace = true }
portpicker = { workspace = true }
env_logger = "0.10.0"
zingolib = { path = "../zingolib/" }
bech32 = "0.9.0"
rand = "0.8.5"
hex = "0.3"
tracing-subscriber = "0.3.15"
itertools = "0.10.5"
bip0039 = "0.10.1"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
futures-util = "0.3.28"
orchard = { workspace = true }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true }
shardtree = { workspace = true }
serde_json = "1.0.107"

[features]
darkside_tests = ["dep:http", "dep:hyper", "dep:tonic", "dep:prost", "dep:tower"]

[build-dependencies]
tonic-build = { workspace = true }
