[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { path = "../zingolib", features = ["test"] }
zingo-testutils = { path = "../zingo-testutils" }
zingoconfig = { path = "../zingoconfig" }
tokio = { version = "1.25.0", features = ["full"] }
json = "0.12.4"
log = "0.4.17"

[dev-dependencies]
zcash_primitives = { workspace = true }
hex = "0.3"
itertools = "0.10.5"
bip0039 = "0.10.1"
futures-util = "0.3.28"
orchard = { workspace = true }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true }
shardtree = { workspace = true }
serde_json = "1.0.107"
