[package]
name = "integration-tests"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingolib = { path = "../zingolib", features = ["test"] }
zingo-testutils = { path = "../zingo-testutils" }
zingoconfig = { path = "../zingoconfig" }

zcash_primitives = { workspace = true }
orchard = { workspace = true }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true }
shardtree = { workspace = true }

tokio = { version = "1.25.0", features = ["full"] }
json = "0.12.4"
log = "0.4.17"
hex = "0.3"
itertools = "0.10.5"
bip0039 = "0.10.1"
serde_json = "1.0.107"
