[package]
name = "zecwalletlitelib"
version = "0.1.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>", "Hazel OHearn <gygaxis@zingolabs.org>", "Za Wilcox <zancas@zingolabs.org>", "Donna Sessha <sessha@zingolabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params"]
embed_params = []

[dependencies]
arr_macro = "0.1.3"
base64 = "0.13.0"
bytes = "0.4"
log4rs = "1.1.1"
rand = "0.8.5"
http = "0.2.4"
http-body = "0.4.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
tonic = {version = "0.7.0", features = ["tls", "tls-roots", "tls-webpki-roots"]}
tower = { version = "0.4" }
prost = "0.10.0"
tokio =  { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.6"
tokio-rustls = "0.23.3"
rustls-pemfile = "1.0.0"
tower-http = { version = "0.2", features = ["add-extension"] }
futures = "0.3.15"
log = "0.4.14"
hex = "0.3"
ring = "0.16.20"
dirs = "3.0.2"
json = "0.12.4"
webpki-roots = "0.21.0"
lazy_static = "1.4.0"
secp256k1 = "=0.21.3"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
base58 = "0.1.0"
tiny-bip39 = "0.8.2"
sodiumoxide = "0.2.5"
byteorder = "1"
pairing = "0.22"
ff = "0.12"
jubjub = "0.9.0"
bls12_381 = "0.7"
group = "0.12"
rust-embed = { version = "6.3.0", features = ["debug-embed"] }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "73d9395c9d3c5fa81fc7becd363a2c1a51772a76", features = ["transparent-inputs", "test-dependencies"] }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash", rev = "73d9395c9d3c5fa81fc7becd363a2c1a51772a76"}
zcash_proofs = { git = "https://github.com/zcash/librustzcash", rev = "73d9395c9d3c5fa81fc7becd363a2c1a51772a76", features = ["multicore"]}
zcash_encoding = { git = "https://github.com/zcash/librustzcash", rev = "73d9395c9d3c5fa81fc7becd363a2c1a51772a76"}
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash", rev = "73d9395c9d3c5fa81fc7becd363a2c1a51772a76", features = ["pre-zip-212"]}
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

[dev-dependencies]
portpicker = "0.1.0"
tempfile = "3.3.0"

[build-dependencies]
tonic-build = "0.7.0"
