[package]
name = "libtonode-tests"
version = "0.2.0"
edition = "2021"

[features]
chain_generic_tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zingolib = { path = "../zingolib", features = ["deprecations", "test-elevation"] }
zingo-status = { path = "../zingo-status" }
zingo-testvectors = { path = "../zingo-testvectors" }
zingoconfig = { path = "../zingoconfig" }

zcash_primitives = { workspace = true }
orchard = { workspace = true }
sapling-crypto = { workspace = true }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true }
shardtree = { workspace = true }

tokio = { workspace = true, features = ["full"] }
json = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
http.workspace = true
