[package]
name = "libtonode-tests"
version = "0.2.0"
edition = "2021"

[features]
chain_generic_tests = []
ci = ["zingolib/ci"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zingolib = { path = "../zingolib", features = ["deprecations", "test-elevation", "sync"] }
zingo-status = { path = "../zingo-status" }
zingo-netutils = { path = "../zingo-netutils" }
zingo-sync = { path = "../zingo-sync" }

bip0039.workspace = true
zcash_primitives = { workspace = true }
orchard = { workspace = true }
sapling-crypto = { workspace = true }
zcash_address = { workspace = true, features = ["test-dependencies"] }
zcash_client_backend = { workspace = true }
shardtree = { workspace = true }

tokio = { workspace = true, features = ["full"] }
json = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
http.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
proptest.workspace = true
