[package]
name = "mainnet-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"
tokio = "1.35.1"
zingo-testutils = { path = "../zingo-testutils" }
zingolib = { path = "../zingolib", features = ["test"] }
zingoconfig = { path = "../zingoconfig" }
