[package]
name = "lsp-failer"
version = "0.2.0"
edition = "2021"

[dependencies]
zingoconfig = { path = "../zingoconfig/" }
zingtaddrfix = { git = "https://github.com/zingolabs/zingolib", package = "zingolib", rev = "3d42b916d46cc3d7c0e79609a6fcde6425f9c526", optional = true }

[dev-dependencies]
zcash_address = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990"}
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990"}
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990", features = ["transparent-inputs", "test-dependencies"] }

[features]
default = ["local_env"]
cross_version = [ "dep:zingtaddrfix" ]
local_env =[]
