[package]
name = "zingo-netutils"
version = "0.1.0"
authors = ["zingo@zingolabs.org"]
edition = "2021"

[dependencies]
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
hyper-rustls.workspace = true
hyper.workspace = true
prost.workspace = true
rustls-pemfile = { workspace = true }
thiserror.workspace = true
tokio-rustls.workspace = true
tonic.workspace = true
tower.workspace = true
webpki-roots = "0.21.0"
zcash_client_backend.workspace = true

[features]
test-features = []
