[package]
name = "zingo-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zingo
zingo-netutils = { path = "../zingo-netutils" }
zingo-memo = { path = "../zingo-memo" }

# Zcash
zcash_client_backend.workspace = true
zcash_primitives.workspace = true
zcash_note_encryption.workspace = true
zcash_keys.workspace = true
sapling-crypto.workspace = true
orchard.workspace = true
incrementalmerkletree.workspace = true
shardtree.workspace = true

# Async
futures.workspace = true
tokio.workspace = true

# Client
tonic.workspace = true

# Logging
tracing.workspace = true

# Metrics
memuse.workspace = true

# Parallel processing
crossbeam-channel.workspace = true
rayon.workspace = true

# Minimise boilerplate
getset.workspace = true

# temp
zcash_address.workspace = true
sha2.workspace = true
base58.workspace = true
