[package]
name = "zingo-testutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingoconfig = { path = "../zingoconfig" }
zingolib = { path = "../zingolib", features = ["test"] }

zcash_primitives = { workspace = true }
zcash_address = { workspace = true }
orchard = { workspace = true }
portpicker = { workspace = true}
tempdir = { workspace = true }
incrementalmerkletree = { workspace = true }

json = "0.12.4"
log = "0.4.19"
tokio = "1.28.2"
http = "0.2.4"
tracing = "0.1.37"
serde_json = "1.0.100"
serde = { version = "1.0.166", features = ["derive"] }
build_const = "0.2.2"
