[package]
name = "zingo-testutils"
version = "0.1.0"
edition = "2021"

[features]
grpc-proxy = ["tonic"]
default = ["grpc-proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingoconfig = { path = "../zingoconfig" }
zingolib = { path = "../zingolib", features = ["test-features", "zip317"] }
zingo-netutils = { path = "../zingo-netutils", features = ["test-features"] }
zingo-testvectors = { path = "../zingo-testvectors" }

zcash_client_backend = { workspace = true }
zcash_primitives = { workspace = true }
zcash_address = { workspace = true }
orchard = { workspace = true }
portpicker = { workspace = true}
tempdir = { workspace = true }
incrementalmerkletree = { workspace = true }

json = "0.12.4"
log = "0.4.19"
tokio = "1.28.2"
http.workspace = true
tonic = { workspace = true, optional = true }
