[package]
name = "zingo-testutils"
version = "0.1.0"
edition = "2021"

[features]
grpc-proxy = ["tonic"]
default = ["grpc-proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zingoconfig = { path = "../zingoconfig" , features = ["test-elevation"] }
zingolib = { path = "../zingolib" , features = ["test-elevation"] }
zingo-netutils = { path = "../zingo-netutils", features = ["test-features"] }
zingo-testvectors = { path = "../zingo-testvectors" }
zingo-status = { path = "../zingo-status" }

zcash_client_backend = { workspace = true }
zcash_primitives = { workspace = true }
zcash_address = { workspace = true }
orchard = { workspace = true }
portpicker = { workspace = true}
tempdir = { workspace = true }
incrementalmerkletree = { workspace = true }

json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
http.workspace = true
tonic = { workspace = true, optional = true }
nonempty.workspace = true

[dev-dependencies]
zingoconfig = { path = "../zingoconfig" , features = ["test-elevation"] }
zingolib = { path = "../zingolib" , features = ["test-elevation"] }

