[package]
name = "zingo-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
zingolib = { path = "../zingolib/", features = ["deprecations"] }
zingoconfig = { path = "../zingoconfig/" }
zingo-testutils = { path = "../zingo-testutils" }

clap = { workspace = true }
http = { workspace = true }

rustyline = { workspace = true }
log = { workspace = true }
shellwords = { workspace = true }
json = { workspace = true }
