[package]
name = "zingo-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
zingolib = { path = "../zingolib/", features = ["deprecations", "test-elevation"] }

clap = { workspace = true }
http = { workspace = true }

json = { workspace = true }
log = { workspace = true }
rustyline = { workspace = true }
shellwords = { workspace = true }

rustls.workspace = true
