[package]
name = "zingolib"
version = "0.2.0"
authors = ["zingo@zingolabs.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deprecations = ["lightclient-deprecated"]
lightclient-deprecated = []
darkside_tests = []
test-elevation = ["portpicker", "testvectors", "tempfile"]
testvectors = []
tempfile = ["dep:tempfile"]

[dependencies]
zingo-memo = { path = "../zingo-memo" }
zingo-status = { path = "../zingo-status" }
zingo-netutils = { path = "../zingo-netutils" }

prost = { workspace = true }
tonic = { workspace = true }

orchard = { workspace = true }
shardtree = { workspace = true, features = ["legacy-api"] }
incrementalmerkletree = { workspace = true, features = ["test-dependencies", "legacy-api"] }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true, features = ["unstable", "transparent-inputs", "unstable-serialization", "unstable-spanning-tree"] }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true }
zip32.workspace = true

append-only-vec = { workspace = true }

log = { workspace = true }
http.workspace = true
base64 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio =  { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
futures = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
json = { workspace = true }
lazy_static = { workspace = true }
secp256k1 = { workspace = true }
ripemd160 = { workspace = true }
sha2 = { workspace = true }
base58 = { workspace = true }
byteorder = { workspace = true }
ff = { workspace = true }
jubjub = { workspace = true }
bls12_381 = { workspace = true }
group = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed"] }
subtle = { workspace = true }
nonempty.workspace = true
tracing-subscriber = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sapling-crypto.workspace = true
secrecy = { workspace = true }
getset = { workspace = true }
test-case = { workspace = true }
proptest = { workspace = true }
thiserror = { workspace = true }
hdwallet = { workspace = true }
chrono = { workspace = true }
enum_dispatch = { workspace = true }
portpicker = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
dirs.workspace = true
log4rs.workspace = true

[dev-dependencies]
concat-idents = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
build_utils = { workspace = true }
