[package]
name = "zingolib"
version = "0.2.0"
authors = ["zingo@zingolabs.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deprecations = ["lightclient-deprecated"]
lightclient-deprecated = []
darkside_tests = []
test-elevation = ["portpicker", "testvectors", "tempfile", "tempdir"]
testvectors = []
tempfile = ["dep:tempfile"]
sync = [ "dep:zingo-sync" ]

## ledger
hsm-compat = ["zcash-hsmbuilder"]
ledger-support = [
    "hsm-compat",
    "ledger-zcash",
    "ledger-transport-hid",
    "ledger-transport",
    "zx-bip44",
    "bytemuck",
]

[dependencies]
zingo-memo = { path = "../zingo-memo" }
zingo-status = { path = "../zingo-status" }
zingo-netutils = { path = "../zingo-netutils" }
zingo-sync = { path = "../zingo-sync", optional = true }

prost = { workspace = true }
tonic = { workspace = true }

orchard = { workspace = true }
shardtree = { workspace = true, features = ["legacy-api"] }
incrementalmerkletree = { workspace = true, features = ["test-dependencies", "legacy-api"] }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true, features = ["unstable", "transparent-inputs", "unstable-serialization", "unstable-spanning-tree"] }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true }
zip32.workspace = true

append-only-vec = { workspace = true }

log = { workspace = true }
http.workspace = true
base64 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio =  { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
futures = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
json = { workspace = true }
lazy_static = { workspace = true }
secp256k1 = { workspace = true }
ripemd160 = { workspace = true }
sha2 = { workspace = true }
base58 = { workspace = true }
byteorder = { workspace = true }
ff = { workspace = true }
jubjub = { workspace = true }
bls12_381 = { workspace = true }
group = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed"] }
subtle = { workspace = true }
nonempty.workspace = true
tracing-subscriber = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sapling-crypto.workspace = true
secrecy = { workspace = true }
getset = { workspace = true }
test-case = { workspace = true }
proptest = { workspace = true }
thiserror = { workspace = true }
hdwallet = { workspace = true }
chrono = { workspace = true }
enum_dispatch = { workspace = true }
portpicker = { workspace = true, optional = true }
tempdir = {workspace = true, optional = true }
tempfile = {workspace = true, optional = true }
dirs.workspace = true
log4rs.workspace = true
#hdwallet.workspace = true

### ledger
zcash-hsmbuilder = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = [
    "zecwallet-compat",
], optional = true }
# ledger-zcash = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "324a0851113df4ea77457b5711392beabd021407", default-features = false, features = [
#     "zecwallet-compat",
# ], optional = true }
ledger-zcash = { git = "https://github.com/Zondax/ledger-zcash-rs", branch = "feat/zingolib", default-features = false, features = [
    "zecwallet-compat",
], optional = true }
ledger-transport-hid = { version = "0.9", optional = true }
ledger-transport = { version = "0.9.0", optional = true }
zx-bip44 = { version = "0.1.0", optional = true }
bytemuck = { version = "1.9.1", optional = true }
cfg-if = "1.0.0"




[dev-dependencies]
portpicker = { workspace = true }
tempfile = { workspace = true }
concat-idents = { workspace = true }

[build-dependencies]
build_utils = { workspace = true }
